--- a/scss/_easy-useful.scss
+++ b/scss/_easy-useful.scss
@@ -73,17 +73,17 @@
     }
     .easy-useful__item-1 {
       .easy-useful__image {
-        background-image: url(/images/eu1.png);
+        background-image: url(../images/eu1.png);
       }
     }
     .easy-useful__item-2 {
       .easy-useful__image {
-        background-image: url(/images/eu2.png);
+        background-image: url(../images/eu2.png);
       }
     }
     .easy-useful__item-3 {
       .easy-useful__image {
-        background-image: url(/images/eu3.png);
+        background-image: url(../images/eu3.png);
       }
     }
   }
