--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -15,7 +15,7 @@ footer {
         .logo__img {
           width: 30px;
           height: 30px;
-          background-image: url(/images/logo.png);
+          background-image: url(../images/logo.png);
           margin-right: 12px;
         }
         .logo__text {
