--- a/scss/_services.scss
+++ b/scss/_services.scss
@@ -48,7 +48,7 @@
           .picture {
             width: 250px;
             height: 155px;
-            background-image: url(/images/statistic_image.png);
+            background-image: url(../images/statistic_image.png);
           }
           .text {
             flex: 1;
